<resources>
    <string name="app_name">Chroma Meditation</string>

    <string name="help">Hilfe</string>

    <!-- Onboarding -->
    <string name="onboarding_intro_title">@string/app_name</string>
    <string name="onboarding_intro_text">Die Farbentherapie ist eine natürliche Alternativtherapie, bei der man Farben und Licht für das allgemeine Wohlbefinden und die Gesundheit verwendet. Farben, schon von frühen Philosophen auch als "Arznei der Himmelsapotheke" betitelt, beeinflussen den Menschen mit allen seinen Sinnen.</string>
    <string name="onboarding_explanation_title">Chakren und Farben</string>
    <string name="onboarding_explanation_text">Jedes Chakra ist mit einer bestimmten Farbe verbunden. Wenn die Punkte erschöpft oder blockiert sind, dann funktioniert unser Körper schwächer. Das führt zu physischen, psychischem und mentalem Ungleichgewicht. Die Farbmeditation oder Chromameditation stimuliert die natürliche Fähigkeit des Körpers zur Selbsttherapie.</string>
    <string name="onboarding_final_title">Chromameditation</string>
    <string name="onboarding_final_text">Bei der Chromameditation kommen die sieben Regenbogenfarben für die Verbesserung und Ausbalancierung des körperlichen, seelischen und geistigen Zustandes und zur Regenerierung unserer Energiepunkte zum Einsatz.</string>

    <!-- Chromas -->
    <string name="chroma_purple_title">Violett</string>
    <string name="chroma_purple_description">Violett ist die Farbe der Meditationspraxis und steht für Innenschau und spirituelle Vertiefung. Sie öffnet das Bewusstsein für nicht-materielle Erfahrungen und fördert den Schwingungsaustausch zwischen beiden Gehirnhälften. Es ist auch die Farbe, die Reinigungsprozesse in Gang setzt, sowohl bei körperlichen Blockaden, als auch bei psychischen Problemen, zum Ausgleichen von Disharmonien und zur Vermittlung zwischen Gegensätzen. Der Farbe werden schmerzstillende Eigenschaften zugesprochen. Sie wird erfolgreich bei Migräne eingesetzt und Schlaf fördernd. Violett ist die Heilfarbe des Geistes und sie stärkt die Hirnaktivität. Die Farbe Violett steht für selbstlose Freundlichkeit und höhere Ideale wie Toleranz, Mitgefühl und Fürsorge.</string>
    <string name="chroma_indigo_title">Indigo</string>
    <string name="chroma_indigo_description">Indigo ist eine kühlende und erfrischende Farbe. Es unterstützt den klaren sprachlichen Ausdruck und eine ehrliche und offene Verständigung. Kreativität und geistige Verwirklichung werden durch die Farbe positiv beeinflusst, Gefühle und Verstand können leichter in Einklang gebracht werden. Auf der körperlichen Ebene kann Indigo helfen, toxische Stoffe aus dem Körper auszuscheiden. In einer Umgebung mit hoher Strahlenbelastung ist der Einsatz hilfreich. Die Farbe wirkt harmonisierend auf die Schilddrüse und hilft bei der Neutralisierung von Elektrosmog. Das Immunsystem wird durch Indigo ebenfalls positiv beeinflusst, da die Farbe eine Schutzwirkung gegen das Eindringen schädlicher Bakterien und Viren entfalten kann. Beruhigend wirkt Indigo bei Ermüdung nach zu langer Kopfarbeit oder Schadstoff bedingten Kopfschmerzen.</string>
    <string name="chroma_blue_title">Blau</string>
    <string name="chroma_blue_description">Blau wirkt beruhigend und entspannend. Diese Farbe eignet sich, um inneren und äußeren Frieden zu finden, um Stress und Hektik abzubauen. Es löst nervös bedingte Verkrampfungen, die Muskeln lockern sich und das Herz kann sich wieder beruhigen. Die Farbe Blau vermittelt die ausgleichende Energie, die unser Organismus benötigt, um den hyperaktiven Alltag, dem wir heute zunehmend ausgesetzt sind, erholt, ruhig und gelassen, zu bewältigen. In der Farbtherapie wird Blau zur Behandlung von Migräne, Halsbeschwerden, fieberhaften Erkrankungen und Rückenschmerzen eingesetzt. Es wirkt besänftigend bei Angstzuständen und Schlaflosigkeit. Es ist eine meditative Farbe, die sich zur Reduzierung vom täglichem Stress, zur Regeneration und Erholung einsetzen lässt.</string>
    <string name="chroma_green_title">Grün</string>
    <string name="chroma_green_description">Grün ist die Farbe der inneren Harmonie und Ausgewogenheit, der Fülle und des Wachstums. Es fördert Erneuerung und Entspannung, verschafft Festigkeit, innere Hoffnung, Selbstsicherheit und beruhigt die Nerven ohne zu ermüden. Die Farbe fördert positive Eigenschaften wie Hilfsbereitschaft, Ausdauer, Toleranz und Zufriedenheit. Die Medizin setzt Grün als Farbe ein, die den Rhythmus von Herz und Nieren ausbalanciert. Auch bei Magengeschwüren, Allergien, Augenermüdung sowie bei Anzeichen vorzeitigen Alterns wird es eingesetzt. Es ist eine neutrale Heilfarbe, die keinerlei körperliche Beschwerden oder Gegenreaktionen hervorruft. Sie lässt Kräfte sammeln und bringt Regeneration. Grün vermittelt den Augen Ruhe, denn der Blick ins Grüne ist niemals anstrengend, sondern stärkt das Auge für alle anderen Eindrücke.</string>
    <string name="chroma_yellow_title">Gelb</string>
    <string name="chroma_yellow_description">Gelb ist die Farbe des Denkens, der inneren Freiheit und Ungebundenheit. Es aktiviert das Gehirn, stärkt die Nerven, fördert Lerneifer und Auffassungsgabe und wirkt günstig auf den Intellekt. Es verbessert die Konzentrations- und Wahrnehmungsfähigkeit und entlastet die Augen. Gelb hat eine befreiende und lösende Wirkung, steht für Leichtigkeit und Aufmunterung und hellt dunkle Gemütsverfassungen auf, es vertreibt Lustlosigkeit und bringt Heiterkeit und Lebensfreude. Es fördert geistige Offenheit und optimistische Eigenschaften. Die Farbe Gelb regt nicht nur die Experimentierfreude, die geistige Entwicklung und die Motorik an, sondern auch den Appetit.Sie wirkt anregend auf die Leber und unterstützt die Entschlackung der Haut. Gelb hat eine beruhigende Wirkung und gibt besonders Kindern eine konzentrationsfördernde Unterstützung.</string>
    <string name="chroma_orange_title">Orange</string>
    <string name="chroma_orange_description">Orange wirkt als Kraftspender nach physischer oder seelischer Erschöpfung. Es steht für vitale Stärke und Aktivität. Die Wärme dieser Farbe hebt die Stimmung. Es ist die Farbe der Freude, des Lustigen, der Geselligkeit. Orange bedeutet Geborgenheit, Gemütlichkeit und emotionale Wärme. Pessimismus, Depression und Antriebsarmut werden positiv beeinflusst. Diese Farbe aktiviert und löst, wenn man im grauen Alltag erstarrt ist. Sie stärkt das Immunsystem und aktiviert die Selbstheilungskräfte des Körpers. Orange wirkt fördernd auf die Verdauung, stärkt den Magen und wird bei Appetitlosigkeit eingesetzt.</string>
    <string name="chroma_red_title">Rot</string>
    <string name="chroma_red_description">Rot ist eine hoch wirksame Farbe. Sie regt alle Vorgänge im Körper an und beeinflusst das vegetative Nervensystem. Sie erhöht den Blutdruck und erzeugt Hitze im Körper. Eine belebende und positiv verstärkende Wirkung entfaltet das warme Rot auch auf der emotionalen Ebene. Es steigert die Sinnlichkeit, das bewusste Erleben und Fühlen sowie ungehemmte Leidenschaft. Die Farbe Rot vermittelt auf mentaler Ebene Energie, einen starken Willen, Entschlossenheit und Durchhaltevermögen. Rot macht Mut.</string>
</resources>
