<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matthiasbruns.chromameditation.ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/view_chrome_purple"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_purple">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_purple_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1.Inverse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_indigo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_indigo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_indigo_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1.Inverse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_blue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_blue_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1.Inverse" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_green"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_green">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_green_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_yellow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_yellow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_yellow_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_orange"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_orange">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_orange_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_chrome_red"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/chroma_red">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chroma_red_title"
                android:textAlignment="center"
                android:textAppearance="@style/H1" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
